옵션 추가 중간저장

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -119,6 +119,22 @@
   "folderList": "Folder List",
   "publicFolder": "Public Folder",
   "privateFolder": "Private Folder",
+  "barChart": "Bar Chart",
+  "stackedBarChart": "Stacked Bar Chart",
+  "fullStackedBarChart": "Full Stacked Bar Chart",
+  "pointChart": "Point Chart",
+  "lineChart": "Line Chart",
+  "stackedLineChart": "Stacked Line Chart",
+  "fullStackedLineChart": "Full Stacked Line Chart",
+  "stepLineChart": "Step Line Chart",
+  "splineChart": "Spline Chart",
+  "stackChart": "Stack Chart",
+  "stackedAreaChart": "Stacked Area Chart",
+  "fullStackedAreaChart": "Full Stacked Area Chart",
+  "stepAreaChart": "Step Area Chart",
+  "splineAreaChart": "Spline Area Chart",
+  "stackedSplineAreaChart": "Stacked Spline Area Chart",
+  "fullStackedSplineAreaChart": "Full Stacked Spline Area Chart",
   "addDsUpload": "Add Ds Upload",
   "addDsSingle": "Add Ds Single",
   "addCUBE": "Add cube",
