--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -125,6 +125,21 @@
   "publicFolder": "공용 폴더",
   "privateFolder": "개인 폴더",
   "barChart": "막대 차트",
+  "stackedBarChart": "스택 막대 차트",
+  "fullStackedBarChart": "풀 스택 막대 차트",
+  "pointChart": "점 차트",
+  "lineChart": "선 차트",
+  "stackedLineChart": "스택 선 차트",
+  "fullStackedLineChart": "풀 스택 선 차트",
+  "stepLineChart": "계단 차트",
+  "splineChart": "곡선 차트",
+  "stackChart": "영역 차트",
+  "stackedAreaChart": "스택 영역 차트",
+  "fullStackedAreaChart": "풀 스택 영역 차트",
+  "stepAreaChart": "계단 영역 차트",
+  "splineAreaChart": "곡선 영역 차트",
+  "stackedSplineAreaChart": "스택 곡선 영역 차트",
+  "fullStackedSplineAreaChart": "풀 스택 곡선 영역 차트",
   "saveAs": "다른 이름으로 저장",
   "etc": "기타",
   "MSOffice": "MSOffice",
