차트 옵션 변경 중간 저장－ Series별 아이템 생성 완료

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -122,7 +122,7 @@
   "barChart": "Bar Chart",
   "stackedBarChart": "Stacked Bar Chart",
   "fullStackedBarChart": "Full Stacked Bar Chart",
-  "pointChart": "Point Chart",
+  "scatterChart": "Point Chart",
   "lineChart": "Line Chart",
   "stackedLineChart": "Stacked Line Chart",
   "fullStackedLineChart": "Full Stacked Line Chart",
@@ -181,7 +181,7 @@
   "pieChart": "PieChart",
   "histogram": "Histogram",
   "wordCloud": "Word Cloud",
-  "bubbleChart": "Bubble Chart",
+  "BubbleChart": "Bubble Chart",
   "waterfallChart": "Waterfall Chart",
   "scatterPlot": "Scatter Plot",
   "scatterPlotMatrix": "Scatter Plot Matrix",
