--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -127,7 +127,7 @@
   "barChart": "막대 차트",
   "stackedBarChart": "스택 막대 차트",
   "fullStackedBarChart": "풀 스택 막대 차트",
-  "pointChart": "점 차트",
+  "scatterChart": "점 차트",
   "lineChart": "선 차트",
   "stackedLineChart": "스택 선 차트",
   "fullStackedLineChart": "풀 스택 선 차트",
@@ -198,7 +198,7 @@
   "pieChart": "파이차트",
   "histogram": "히스토그램",
   "wordCloud": "워드 클라우드",
-  "BubbleChart": "버블차트",
+  "BubbleChart": "버블 차트",
   "waterfallChart": "폭포수차트",
   "scatterPlot": "산점도",
   "scatterPlotMatrix": "산점도 행렬",
