y축 옵션 설정 중간 저장

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -313,6 +313,11 @@
   "file": "file",
   "importFileFromPC": "Import File From PC",
   "print": "Print",
-  "spreadBindingInfoNot": "This Report Dosen't have Dataset Binding Info."
-
+  "spreadBindingInfoNot": "This Report Dosen't have Dataset Binding Info.",
+  "axisNumberFormat": "Number Format",
+  "formatZeroMark": "'0' Data Display",
+  "yAxisMark": "Y Axis Display",
+  "axisCutomText": "Y Axis Label",
+  "numberSeperator": "Number Seperator(',') Display",
+  "NumberPreview": "PreView"
 }
