1. 정도, 정도옵션, 그룹구분포함 변경 2. 중복 localizedString 삭제

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -288,9 +288,7 @@
   "milions": "Unit of Milions",
   "bilions": "Unit of Bilions",
   "degree": "Degree",
-  "precision": "Precision",
   "degreeOption": "Degree Option",
-  "precisionOption": "Precision Option",
   "all": "all",
   "NumberFormat": "Number Format",
   "formatUnit": "Format Unit",
@@ -299,9 +297,7 @@
   "suffixK": "K",
   "suffixM": "M",
   "suffixB": "B",
-  "decimalUnit": "Decimal Unit",
-  "roundUnit": "Round Unit",
-  "includesGroupDistinction" : "Includes Group Distinction",
+  "digitSeparator" : "Digit Separator",
   "colRowSwitch": "Transpose",
   "k": "K",
   "m": "M",
