--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -304,21 +304,17 @@
   "milions": "백만 단위",
   "bilions": "십억 단위",
   "degree": "정도",
-  "precision": "정도",
   "degreeOption": "정도 옵션",
-  "precisionOption": "정도 옵션",
   "unit": "단위",
   "all": "전체",
   "numberFormat": "숫자 형식",
-  "formatUnit": "포멧 단위",
+  "formatUnit": "포맷 단위",
   "digitUnit": "자리수 단위",
   "suffixO": "O",
   "suffixK": "K",
   "suffixM": "M",
   "suffixB": "B",
-  "decimalUnit": "정도",
-  "roundUnit": "정도 옵션",
-  "includesGroupDistinction" : "그룹 구분 포함",
+  "digitSeparator" : "그룹 구분 포함",
   "colRowSwitch": "행/열 변환",
   "k": "천",
   "m": "백만",
