--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -262,7 +262,7 @@
     {"name": "argument&Percent", "caption": "Argument & %"},
     {"name": "argument&Value&Percent", "caption": "Argument, Value & %"}
   ],
-  "degreeOptions": [
+  "precsionOptions": [
     {"name": "round", "caption": "Round"},
     {"name": "roundUp", "caption": "Round Up"},
     {"name": "roundDown", "caption": "Round Down"}
@@ -287,8 +287,8 @@
   "thousands": "Unit of Thousands",
   "milions": "Unit of Milions",
   "bilions": "Unit of Bilions",
-  "degree": "Degree",
-  "degreeOption": "Degree Option",
+  "precsion": "precsion",
+  "precsionOption": "precsion Option",
   "all": "all",
   "NumberFormat": "Number Format",
   "formatUnit": "Format Unit",
