--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -286,7 +286,7 @@
     {"name": "argument&Percent", "caption": "인수 및 %"},
     {"name": "argument&Value&Percent", "caption": "인수, 값 및 %"}
   ],
-  "degreeOptions": [
+  "precsionOptions": [
     {"name": "round", "caption": "반올림"},
     {"name": "roundUp", "caption": "올림"},
     {"name": "roundDown", "caption": "버림"}
@@ -303,8 +303,8 @@
   "thousands": "천 단위",
   "milions": "백만 단위",
   "bilions": "십억 단위",
-  "degree": "정도",
-  "degreeOption": "정도 옵션",
+  "precsion": "정도",
+  "precsionOption": "정도 옵션",
   "unit": "단위",
   "all": "전체",
   "numberFormat": "숫자 형식",
