--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -331,7 +331,7 @@
   "print": "프린트",
   "spreadBindingInfoNot": "해당 보고서에 데이터 연결 정보가 없습니다.",
   "axisNumberFormat": "숫자 표기 형식",
-  "formatZeroMark": "'0' 데이터 표시 여부",
+  "yAsixStartPoint": "Y축 시작점",
   "yAxisMark": "Y축 표시",
   "axisCutomText": "Y축 라벨",
   "numberSeperator": "숫자 구분 표시(',')",
