중간 저장 (차트 옵션)

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -323,8 +323,7 @@
   "importFileFromPC": "Import File From PC",
   "print": "Print",
   "spreadBindingInfoNot": "This Report Dosen't have Dataset Binding Info.",
-  "axisNumberFormat": "Number Format",
-  "yAsixStartPoint": "Y Axis Starting Data Level",
+  "yAsixStartPoint": "Y Axis Draw From '0'",
   "yAxisMark": "Y Axis Display",
   "axisCutomText": "Y Axis Label",
   "numberSeperator": "Number Seperator(',') Display",
