--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -339,8 +339,7 @@
   "importFileFromPC": "파일 불러오기",
   "print": "프린트",
   "spreadBindingInfoNot": "해당 보고서에 데이터 연결 정보가 없습니다.",
-  "axisNumberFormat": "숫자 표기 형식",
-  "yAsixStartPoint": "Y축 시작점",
+  "yAsixStartPoint": "Y축 '0'부터 그리기",
   "yAxisMark": "Y축 표시",
   "axisCutomText": "Y축 라벨",
   "numberSeperator": "숫자 구분 표시(',')",
