feat: 환경설정/일반설정, 보고서설정 front 작업

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -256,6 +256,7 @@
   "value": "값",
   "bar": "바",
   "generateConfigure": "일반 설정",
+  "reportConfigure": "보고서 설정",
   "userManagement": "사용자 관리",
   "groupManagement": "그룹 관리"
 }
