--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -241,6 +241,7 @@
   "bar": "bar",
   "reloadConfirmMsg": "If it is not saved, your work may be lost. Would you like to create a new one?",
   "generateConfigure": "generateConfigure",
+  "reportConfigure": "reportConfigure",
   "userManagement": "userManagement",
   "groupManagement": "groupManagement"
 }
