hotfix: ko, en localizedString 누락추가

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -111,7 +111,7 @@
   "fieldPlaceholder": "New Field",
   "sparkline": "Spark Line",
   "sparklinePlaceholder": "New Spark Line",
-  "reportTitle": "Report Title",
+  "reportName": "Report Title",
   "reportSubName": "Report Sub Title",
   "annotation": "Annotation",
   "displayOrder": "Display Order",
@@ -204,7 +204,7 @@
   "card": "Card",
   "rectangleArea": "Rectangle Area",
   "pivotgrid": "Pivotgrid",
-  "nomalGrid": "Grid",
+  "normalGrid": "Grid",
   "editFieldName": "Edit Field Name",
   "fieldName": "Field Name",
   "reportNotDeleteMsg": "This report has not been saved.",
@@ -290,10 +290,9 @@
   "precsion": "precsion",
   "precsionOption": "precsion Option",
   "all": "all",
-  "colRowSwitch": "Transpose",
   "showGrid": "View as a grid",
   "detailedData": "Detailed Data",
-  "NumberFormat": "Number Format",
+  "numberFormat": "Number Format",
   "formatUnit": "Format Unit",
   "digitUnit": "Digit Unit",
   "suffixO": "O",
