fix: 피벗 그리드 초기 상태 오류 수정

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -308,5 +308,6 @@
   "file": "file",
   "importFileFromPC": "Import File From PC",
   "print": "Print",
-  "spreadBindingInfoNot": "This Report Dosen't have Dataset Binding Info."
+  "spreadBindingInfoNot": "This Report Dosen't have Dataset Binding Info.",
+  "requireReloadMsg": "This option applies when reloading."
 }
