--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -36,7 +36,7 @@
   "interactionConfiguration": "상호작용 설정",
   "crossDataSourceFiltering": "교차 데이터 소스 필터링",
   "ignoreMasterFilter": "마스터 필터 무시",
-  "targetDimension": "차원",
+  "targetDimension": "대상 차원",
   "dimensionGroup": "차원 그룹",
   "count": "카운트",
   "distinctCount": "고유 카운트",
