--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -325,5 +325,11 @@
   "file": "파일",
   "importFileFromPC": "파일 불러오기",
   "print": "프린트",
-  "spreadBindingInfoNot": "해당 보고서에 데이터 연결 정보가 없습니다."
+  "spreadBindingInfoNot": "해당 보고서에 데이터 연결 정보가 없습니다.",
+  "noneDataItem": "데이터 항목값이 없습니다.",
+  "noneDimensionItem": "데이터 항목의 차원값이 없습니다.",
+  "noneMeasureItem": "데이터 항목의 측정값이 없습니다.",
+  "noneDataField": "데이터 항목의 필드값이 없습니다.",
+  "reportCorrupted": "해당 보고서의 양식이 올바르지 않습니다. 관리자에게 문의해주세요.",
+  "menuChangeConfirm": "데이터를 저장하지 않고 메뉴를 변경할 경우 데이터가 사라질 수 있습니다."
 }
