차트 옵션 중간 저장

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -329,5 +329,6 @@
   "yAxisMark": "Y Axis Display",
   "axisCutomText": "Y Axis Label",
   "numberSeperator": "Number Seperator(',') Display",
-  "NumberPreview": "PreView"
+  "NumberPreview": "PreView",
+  "loadingReportError": "On Loading the Report Occured Error. Please Connect to Manager"
 }
