--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -332,5 +332,6 @@
   "duplicatedSaveReportMsg": "보고서 저장을 실패했습니다. \n 중복된 보고서가 있습니다.",
   "deleteReportMsg": "보고서를 삭제했습니다.",
   "failedDeleteReportMsg": "보고서 삭제를 실패했습니다. \n 관리자에게 문의하세요.",
-  "requireReloadMsg": "해당 옵션은 재조회 시 적용됩니다."
+  "requireReloadMsg": "해당 옵션은 재조회 시 적용됩니다.",
+  "noneQuerySearchRequiredValue": "의 항목이 비어있습니다."
 }
