불필요 파일 삭제 및 PR 적용

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -312,5 +312,5 @@
   "reportCorrupted": "This Report is Corrupted, Please Conect to Manager",
   "menuChangeConfirm": "If you Don't Save the Data, It'll be disappeared",
   "requireReloadMsg": "This option applies when reloading.",
-  "noneQuerySearchRequiredValue": "is a Required Value. Please Check,"
+  "noneRequiredValue": "is a Required Value. Please Check,"
 }
