--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -305,12 +305,12 @@
   "m": "M",
   "b": "B",
   "datasetBinding": "Dataset Binding",
-  "file": "file",
-  "importFileFromPC": "Import File From PC",
+  "file": "File",
+  "importFileFromPC": "Import file from PC",
   "print": "Print",
-  "spreadBindingInfoNot": "This Report Dosen't have Dataset Binding Info.",
-  "reportCorrupted": "This Report is Corrupted, Please Conect to Manager",
+  "spreadBindingInfoNot": "This report dosen't have dataset binding info.",
+  "reportCorrupted": "This report is corrupted, Please conect to manager.",
   "menuChangeConfirm": "Unsaved work may be lost. Do you want to move?",
   "requireReloadMsg": "This option applies when reloading.",
-  "requiredFieldNotExist": "Is a Required Value. Please Check,"
+  "requiredFieldNotExist": "is a required value, Please check."
 }
