일반그리드 옵션
일반그리드 옵션
페이징, 머지, 그리드라인, 해더 유뮤, 자동너비 맞춤 추가

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -232,6 +232,15 @@
   "tooltip": "툴팁",
   "pieChartStyle": "파이차트 스타일",
   "inputTxt": "텍스트 입력",
+  "gridLine": "그리드 라인",
+  "barPallet": "바 팔레트",
+  "barColorEdit": "바 색상 편집",
+  "cellMerging": "셀 병합",
+  "columnHeader": "열 머리글",
+  "paging": "페이징 설정",
+  "autoWrap": "자동 줄 바꿈",
+  "gridResiging": "그리드 너비 조정",
+  "headerAdd": "헤더 추가",
   "inside": "내부",
   "outside": "외부",
   "columnType": "컬럼",
