--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -8,7 +8,7 @@
     },
     "customDataCalc":{
       "empty":"필드명,계산식,타입이 빈값이 있습니다.",
-      "Inspection":"계산식이 검증되지 않았습니다."
+      "Inspection":"계산식에 올바르지 않습니다."
     }
   },
   "customData": {
