코멘트에 맞게 수정
localizedString 카멜 케이스 적용,
MakeForm -> 컴포넌트 명은 명사로 변경.
GetCssStyle, IsDataCell -> DataHighlightUtility로 합침.
줄 넘김 미적용 부분 적용.

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -165,9 +165,8 @@
   "month": "month",
   "day": "day",
   "datasetNotSelected": "Dataset is not selected.",
-  "datahighlight": "Data High Light",
-  "datahighlightList": "High Light List",
-  "datahighlightInfo": "High Light Info",
+  "dataHighlightList": "High Light List",
+  "dataHighlightInfo": "High Light Info",
   "measureList": "Measure List",
   "conditionType": "Condition Type",
   "valueFrom": "Value(From)",
