--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -183,9 +183,8 @@
   "month": "월",
   "day": "일",
   "datasetNotSelected": "데이터집합이 선택되지 않았습니다.",
-  "datahighlight": "데이터 하이라이트",
-  "datahighlightList": "하이라이트 목록",
-  "datahighlightInfo": "하이라이트 정보",
+  "dataHighlightList": "하이라이트 목록",
+  "dataHighlightInfo": "하이라이트 정보",
   "measureList": "측정값 목록",
   "conditionType": "조건 유형",
   "valueFrom": "조건 값(From)",
