--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -262,5 +262,12 @@
   "passwordChange": "비밀번호 변경",
   "currentPassword": "현재 비밀번호",
   "newPassword": "새 비밀번호",
-  "passwordConfirm": "비밀번호 확인"
+  "passwordConfirm": "비밀번호 확인",
+  "groupData": "그룹 데이터",
+  "groupReport": "그룹 보고서",
+  "groupDataset": "그룹 데이터 집합",
+  "groupDatasource": "그룹 데이터 원본",
+  "userReport": "사용자 보고서",
+  "userDataset": "사용자 데이터 집합",
+  "userDatasource": "사용자 데이터 원본"
 }
