perf: localization 추가

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -350,5 +350,27 @@
   "highlightOnlyNumberMsg": "Please enter only numbers as condition values.",
   "highlightInputEssentialValueMsg": "Data item, condition type, and condition value are required input items.",
   "deleteDatasetMsg": "Would you like to delete this dataset?",
-  "cofirmGroupBy": "If there is no GROUP BY clause in the query, it may take a long time to retrieve the data. Would you like to continue?"
+  "cofirmGroupBy": "If there is no GROUP BY clause in the query, it may take a long time to retrieve the data. Would you like to continue?",
+  "member": "Member",
+  "groupName": "Group Name",
+  "groupInfo": "Group Information",
+  "groupRunMode": "Group Run Mode",
+  "userRunMode": "User Run Mode",
+  "groupUser": "User In Group",
+  "userId": "User ID",
+  "userName": "User Name",
+  "userList": "Users",
+  "checkPasword": "New password and confirmed password do not match.",
+  "failedPasswordChange": "Password change failed.",
+  "completedPasswordChange": "Have changed password",
+  "datasetFolderList": "Dataset Folder List",
+  "folderName": "Folder Name",
+  "dsViewId": "DataSource View ID",
+  "dsViewList": "DataSource Views",
+  "dsViewName": "DataSource Name",
+  "publicReportFolderList": "Public Report Folders",
+  "reportView": "Report Write/View",
+  "useDataitem": "Use Data Item ",
+  "reportDownload": "Download Report",
+  "groupList": "Groups"
 }
