--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -334,5 +334,14 @@
   "highlightBetweenValueEssentialMsg": "For the condition type Between, the condition value (To) is also required.",
   "highlightOnlyNumberMsg": "Please enter only numbers as condition values.",
   "highlightInputEssentialValueMsg": "Data item, condition type, and condition value are required input items.",
-  "noneFile": "The file does not exist."
+  "noneFile": "The file does not exist.",
+  "use": "use",
+  "dontUse": "Don't use",
+  "sheetNm": "Sheet Name",
+  "bindingPosition": "Dataset Binding Position",
+  "useHeader": "Column Name Using",
+  "useBoarder": "Boarder Using",
+  "noneExcelFile": "There is no Excel file for that report.",
+  "failToUpload": "File upload failed.",
+  "failToDelete": "File deletion failed."
 }
