--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -383,5 +383,14 @@
   "requiredFieldNotExist": "의 항목이 비어있습니다.",
   "deleteParameterMsg": "매개변수를 삭제하시겠습니까?",
   "dataLinkerPosition": "데이터 연동 위치의 경우 AA222, bb333 와 같은 형식으로 작성해야합니다.",
-  "noneFile": "해당파일이 없습니다."
+  "noneFile": "해당파일이 없습니다.",
+  "use": "사용",
+  "dontUse": "사용 안함",
+  "sheetNm": "Sheet 명",
+  "bindingPosition": "데이터 집합 연동 위치",
+  "useHeader": "칼럼명 사용 여부",
+  "useBoarder": "테두리 사용 여부",
+  "noneExcelFile": "해당 보고서의 Excel 파일이 없습니다.",
+  "failToUpload": "파일 업로드에 실패했습니다.",
+  "failToDelete": "파일 삭제에 실패했습니다."
 }
