--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -336,5 +336,7 @@
   "highlightInputEssentialValueMsg": "Data item, condition type, and condition value are required input items.",
   "deleteDatasetMsg": "Would you like to delete this dataset?",
   "cofirmGroupBy": "If there is no GROUP BY clause in the query, it may take a long time to retrieve the data. Would you like to continue?",
-  "invalidQuery": "Queries are invalid."
+  "invalidQuery": "Queries are invalid.",
+  "filterErrorMsg": "Filter settings using the drag function are only possible in 'Subject' and 'Single Table'.",
+  "noneData": "dosen't have searched data"
 }
