--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -447,5 +447,7 @@
   "deleteParameterMsg": "매개변수를 삭제하시겠습니까?",
   "deleteDatasetMsg": "데이터 집합을 삭제하시겠습니까?",
   "cofirmGroupBy": "쿼리에 GROUP BY 가 없을 경우 데이터 조회에 많은 시간이 소요될 수 있습니다. 계속하시겠습니까?",
-  "invalidQuery": "쿼리가 부적절 합니다. 다시 입력해 주세요."
+  "invalidQuery": "쿼리가 부적절 합니다. 다시 입력해 주세요.",
+  "filterErrorMsg": "드레그 기능을 이용한 필터 설정은 '주제영역', '단일 테이블'에서만 가능합니다.",
+  "noneData": "의 조회된 데이터가 없습니다."
 }
