단일테이블 기능 추가

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -255,6 +255,7 @@
   "input": "입력창",
   "useAll": "[전체] 항목 표시",
   "table": "테이블",
+  "tableName": "테이블 명",
   "tableList": "테이블 목록",
   "dataSourceType": "데이터원본 유형",
   "defaultValueUseSql": "기본값 SQL 쿼리 사용",
@@ -263,6 +264,7 @@
   "tableLogicalName": "테이블 논리명",
   "columnPhysicalName": "컬럼 물리명",
   "columnLogicalName": "컬럼 논리명",
+  "columnList": "컬럼 목록",
   "defaultValueType": "기본값 유형",
   "calculateDefaultValue": "기본값 계산",
   "calendarMaxValue": "최대 조회 기간",
