--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -147,6 +147,7 @@
   "input": "Input",
   "useAll": "Show [All] value",
   "table": "table",
+  "tableName": "table name",
   "tableList": "Table List",
   "dataSourceType": "Data Source Type",
   "defaultValueUseSql": "Use SQL",
@@ -155,6 +156,7 @@
   "tableLogicalName": "Logical Name",
   "columnPhysicalName": "Physical Name",
   "columnLogicalName": "Logical Name",
+  "columnList": "Column List",
   "defaultValueType": "Default value type",
   "calculateDefaultValue": "Calculate value",
   "calendarMaxValue": "Max range",
