feat: 보고서/폴더 관리 불러오기 개발

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -497,5 +497,6 @@
   "userGroupManagement": "사용자/그룹관리",
   "authority": "권한",
   "reportFolderManagement": "보고서/폴더관리",
-  "reportManagement": "보고서 관리"
+  "reportManagement": "보고서 관리",
+  "folderId": "폴더 ID"
 }
