feat: 사용자/그룹관리 프론트 저장 작업중

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -396,6 +396,7 @@
   "reportConfigure": "보고서 설정",
   "userManagement": "사용자 관리",
   "groupManagement": "그룹 관리",
+  "password": "비밀번호",
   "passwordChange": "비밀번호 변경",
   "currentPassword": "현재 비밀번호",
   "newPassword": "새 비밀번호",
@@ -506,7 +507,7 @@
   "userId": "사용자 ID",
   "userName": "사용자 명",
   "userList": "사용자 목록",
-  "checkPasword": "새 비밀번호와 비밀번호 확인이 일치하지 않습니다.",
+  "checkPasword": "비밀번호가 일치하지 않습니다.",
   "failedPasswordChange": "비밀번호 변경에 실패했습니다.",
   "completedPasswordChange": "비밀번호를 변경했습니다.",
   "datasetFolderList": "데이터 집합 폴더 목록",
