feat: 사용자/그룹관리: 그룹관리 저장 개발중

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -543,5 +543,6 @@
   "validationUserNm": "사용자 명 을 입력 해주세요.",
   "validationGroupNm": "그룹 명 을 선택 해주세요.",
   "validationUserRunMode": "사용자 실행모드 를 선택 해주세요.",
-  "validationDupleUserNm": "해당 사용자 ID 는 이미 등록되어 있습니다."
+  "validationDupleUserNm": "해당 사용자 ID 는 이미 등록되어 있습니다.",
+  "validationGroupRunMode": "그룹 실행모드 를 선택 해주세요."
 }
