--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -547,5 +547,6 @@
   "validationGroupRunMode": "그룹 실행모드 를 선택 해주세요.",
   "validationDupleGrpNm": "해당 그룹 명 은 이미 등록되어 있습니다.",
   "validationGroupMemberUsers": "그룹 소속 사용자 목록이 비어있습니다.",
-  "validationAlert": "입력 정보를 확인해주세요."
+  "validationAlert": "입력 정보를 확인해주세요.",
+  "folderNm": "폴더 명"
 }
