사용자 업로드 업로드 파일 컬럼리스트 가져오기 추가

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -408,5 +408,6 @@
   "useDataitem": "Use Data Item ",
   "reportDownload": "Download Report",
   "groupList": "Groups",
-  "invalidQuery": "Queries are invalid."
+  "invalidQuery": "Queries are invalid.",
+  "length": "Length"
 }
