사용자 업로드 통합

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -409,5 +409,8 @@
   "reportDownload": "Download Report",
   "groupList": "Groups",
   "invalidQuery": "Queries are invalid.",
-  "length": "Length"
+  "length": "Length",
+  "emptyDatasetNmMsg": "Empty Dataset Name.",
+  "emptyUploadDataMsg": "Empty Upload Data.",
+  "duplicatedDatasetNameMsg": "Duplicated Dataset Name."
 }
