--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -406,5 +406,6 @@
   "useDataitem": "Use Data Item ",
   "reportDownload": "Download Report",
   "groupList": "Groups",
-  "invalidQuery": "Queries are invalid."
+  "invalidQuery": "Queries are invalid.",
+  "openViewer": "openViewer"
 }
