sty: 뷰어 화면 디자인 적용

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -409,5 +409,8 @@
   "reportDownload": "Download Report",
   "groupList": "Groups",
   "invalidQuery": "Queries are invalid.",
-  "openViewer": "openViewer"
+  "openViewer": "Open Viewer",
+  "openDesigner": "Open Designer",
+  "dataAttributeList": "Data attribute list",
+  "reportList": "Report list"
 }
