--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -345,7 +345,7 @@
   "card": "카드",
   "rectangleArea": "네모영역",
   "editFieldName": "필드 명 수정",
-  "reportNotDeleteMsg": "저장이 안된 보고서 입니다.",
+  "reportNotDeleteMsg": "저장되지 않은 보고서 입니다.",
   "reportDeleteMsg": "보고서를 삭제하시겠습니까?",
   "sortByItem": "정렬 기준 항목",
   "newSortByItem": "새 정렬 기준 항목",
@@ -360,7 +360,7 @@
   "columnType": "컬럼",
   "pieType": "파이",
   "doughnutType": "도넛",
-  "reloadConfirmMsg": "저장이 안된 경우 작업내용이 사라질 수 있습니다. 새로 만드시겠습니까?",
+  "reloadConfirmMsg": "저장하지 않은 작업내용이 사라질 수 있습니다. 새로 만드시겠습니까?",
   "initState": "초기 상태",
   "expandRowGroup": "행 그룹 확장",
   "expandColumnGroup": "열 그룹 확장",
