--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -154,6 +154,7 @@
   "nameEdit": "이름 편집",
   "rotate": "회전",
   "xAxisSetting": "X축 설정",
+  "xAxisMark": "X축 보기",
   "yAxisSetting": "Y축 설정",
   "extraAxisSetting": "보조축 설정",
   "showColorLegend": "범례",
@@ -266,6 +267,7 @@
   "sort": "정렬",
   "asc": "오름차순",
   "desc": "내림차순",
+  "inclination": "기울기",
   "list": "리스트",
   "calendar": "달력",
   "input": "입력창",
@@ -467,7 +469,7 @@
   "spreadBindingInfoNot": "해당 보고서에 데이터 연결 정보가 없습니다.",
   "yAsixStartPoint": "Y축 '0'부터 그리기",
   "yAxisMark": "Y축 표시",
-  "axisCutomText": "Y축 라벨",
+  "axisCutomText": "사용자 정의 텍스트",
   "numberSeperator": "숫자 구분 표시(',')",
   "NumberPreview": "미리보기",
   "addHighlightMsg": "하이라이트 목록을 추가해 주세요.",
