--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -437,10 +437,10 @@
     {"name": "argument&Percent", "caption": "인수 및 %"},
     {"name": "argument&Value&Percent", "caption": "인수, 값 및 %"}
   ],
-  "precsionOptions": [
+  "precisionOptions": [
     {"name": "round", "caption": "반올림"},
-    {"name": "roundUp", "caption": "올림"},
-    {"name": "roundDown", "caption": "버림"}
+    {"name": "ceil", "caption": "올림"},
+    {"name": "floor", "caption": "버림"}
   ],
   "labelDataEdit": "라벨 데이터 편집",
   "showTitle": "제목 보기",
@@ -454,8 +454,8 @@
   "thousands": "천 단위",
   "milions": "백만 단위",
   "bilions": "십억 단위",
-  "precsion": "정도",
-  "precsionOption": "정도 옵션",
+  "precision": "정도",
+  "precisionOption": "정도 옵션",
   "unit": "단위",
   "all": "전체",
   "showGrid": "그리드로 보기",
