--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -578,5 +578,9 @@
   "dataAttributeList": "데이터속성목록",
   "reportList": "보고서목록",
   "linkReport": "연결 보고서",
-  "linkReportAlready": "이미 연결된 보고서 입니다."
+  "linkReportAlready": "이미 연결된 보고서 입니다.",
+  "dataFieldLimitMsg": "최대 N개의 항목만 올릴 수 있습니다.",
+  "startDate": "날짜(시작)",
+  "endDate": "날짜 (끝)",
+  "datePlacejolder": "새 날짜"
 }
